adds smaller imgs, refactors about us section

--- a/dance.html
+++ b/dance.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="card">
                 <div class="card__image">
-                    <img src="img/programs.png" />
+                    <div class="programs__background"></div>
                 </div> <!-- .card__image -->
                 <div class="card__description">
                     <h2 class="card__header">Our Programs</h2>
@@ -112,7 +112,7 @@
 
             <div class="card card--even">
                 <div class="card__image card__image--even">
-                <img src="img/little_grazias.png" />
+                    <div class="little-grazias__background"></div>
                 </div> <!-- .card__image-->
                 <div class="card__description card__description--even">
                     <h2 class="card__header">Little Grazias</h2>
