--- a/chicago.html
+++ b/chicago.html
@@ -29,7 +29,7 @@
       
       <section class="hero">
         <div class="container">
-          <h1 class="hero__title">Backyard Chicago</h1>
+          <h1 class="section__title section__title--hero">Backyard Chicago</h1>
           <p class="hero__description">We're a 501(c)(3) arts incubator providing a platform for imagining and presenting alternative narratives. We find common ground in an ensemble-based theater approach to storytelling in Chicago.</p>
           <a href="" class="btn btn--red">Learn More</a>
         </div> <!-- .container -->
@@ -40,7 +40,7 @@
 
       <section class="info">
         <div class="container">
-          <h2 class="info__title">
+          <h2 class="section__title">
             Why Theatre Education
           </h2>
           <div class="info__cards">
@@ -178,12 +178,65 @@
         </div> <!-- .container -->
       </section>
 
+
       <!-- COMMUNITY PARTNERS -->
 
       <section class="community-partners">
         <h1 class="section__title">Community Partners</h1>
       </section>
 
+
+      <!-- CONTACT FORM -->
+
+      <section class="contact-form">
+        <div class="container">
+          <h2 class="section__title section__title--lowercase section__title--left">
+            Receive news and updates<br />in your box
+          </h2>
+          <form class="contact__form">
+            <div class="form__input">
+              <input type="text" name="FirstName" class="form__input-box"/>
+              <label for="FirstName" class="form__label">First Name</label>
+            </div> <!-- .form__input -->
+            <div class="form__input">
+              <input type="text" name="LastName" class="form__input-box"/>
+              <label for="LastName" class="form__label">Last Name</label>
+            </div> <!-- .form__input -->
+            <div class="form__input form__input--lg">
+              <input type="email" name="EmailAddress" class="form__input-box"/>
+              <label for="EmailAddress" class="form__label">Email Address</label>
+            </div> <!-- .form__input -->
+            <button class="btn btn--red" id="form-submit">Sign Me Up</button>
+          </form>
+        </div> <!-- .container -->
+      </section>
+
+
+      <!-- FOOTER -->
+
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__wrapper">
+            <div class="footer-left">
+              <ul class="footer-tags">
+                <li class="footer__item">Privacy Policy</li>
+                <li class="footer__item">RSS</li>
+                <li class="footer__item">FAQ</li>
+              </ul>
+            </div> <!-- .footer-left -->
+            <div class="footer-right">
+              <p class="footer__copyright">(C)2018 Backyard Chicago</p>
+              <ul class="social-media">
+                <li class="social__icon">FB</li>
+                <li class="social__icon">IG</li>
+                <li class="social__icon">YT</li>
+              </ul>
+            </div> <!-- .footer-right -->
+          </div> <!-- .footer__wrapper -->
+        </div> <!-- .container -->
+      </footer>
+
+      
       <script src="js/chicago.js"></script>
 </body>
 </html>
