playing around with gsap settings

--- a/gsap/index.html
+++ b/gsap/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div class="element element-1"></div>
+        <div class="element element-2"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>
     <script src="app.js"></script>
